# zero2prod

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: audit-on-push.yml  scheduled-audit.yml
scripts/: create_migration.sh  init_db.sh  project_toolchain.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
