[package]
name = "zero2prod"
version = "0.1.0"
authots = ["Victor Nascimento <victor.as.nascimento@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
reqwest = "0.11"